--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
+:root {
+  --principal-font: 'Outfit', sans-serif;
+  --black: rgba(0, 0, 0, 0.4);
+  --gray: #adb5bd;
+  --primary: #802c6e;
+  --white: #fff;
+  --orange: rgb(255, 166, 0);
+}
+html {
+  font-size: 62.5%;
+  box-sizing: border-box;
+}
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-size: 2rem;
+  font-family: var(--principal-font);
+  line-height: 1.5;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+[class*='container'] {
+  max-width: 120rem;
+  margin: 0 auto;
+  width: 95%;
+}
+
+[class*='heading'] {
+  font-size: 4rem;
+  text-align: center;
+  font-weight: 900;
+  color: var(--primary);
+  margin: 5rem 0;
 }
